HttpUnit release notes

Known problems:
    1. The "accept-charset" attribute for forms is ignored; the page content character set is used to encode any response.
       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include Document.open() and some DOM properties


Revision History:
17-Nov-2002
Problems fixed:
    1. Bug #637208 Link.click() no longer returns null when an 'onClick' event fails to return true.

16-Nov-2002
Problems fixed:
    1. Bug #638304 Interframe dependancies for JavaScript at load time are now handled better.

14-Nov-2002
Problems fixed:
    1. Bug #638406 Multi-line values in form data were using the platform-specific line ending rather than CRLF.
    2. Bug #638306 Document.writeln was writing the value "13" rather than CRLF as its terminator.

12-Nov-2002
Acknowledgements:
    Thanks to Michael McCallum for adding handling for bad character-set headers and an ant target to build the examples

Problems fixed:
    1. Bad character-set headers from servers would result in an UnsupportedEncodingException.

Additions:
    1. Added support for the location.href property

 9-Nov-2002
Problems fixed:
    1. As of 1.5, HttpUnit was not building if NekoHTML was not in the classpath. This is now fixed.

 7-Nov-2002
Acknowledgements:
    Thanks to Raul Benito Garcia for pointing out the problem with no-action forms accessed with URL parameters
    Thanks to Charles Mendis for finding the bug in the proxy support
Problems fixed:
    1. When a form obtained using parameters as part of the URL has no action, those parameters are now sent
       as part of the form submission.
    2. Bug #635273 Proxy port always interpreted as port 80 due to typo

 6-Nov-2002
Problems fixed:
    1. Simply removing the NekoHTML parser jar from the classpath was not enough to re-enable JTidy. Now it is.

 5-Nov-2002
Acknowledgements: