@@ -84,6 +84,8 @@ Inline and included scripts are supported, as are the following DOM elements:
 </ul>
 <h4>methods</h4>
 <ul>
+<li>open  - opens a document for writing, optionally specifying a MIME type</li>
+<li>close - closes the open document and replaces its contents with the written text</li>
 <li>write - writes a string to the contents of the current open document</li>
 <li>writeln - writes a line with carriage-return to the contents of the current open document</li>
 </ul>
